<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"/>

        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/ic_search_black_24dp"/>
        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/categories"
            android:icon="@drawable/ic_shopping_basket_black_24dp"/>
        <item
            android:id="@+id/nav_add_missing_place"
            android:title="@string/add_missing_places"
            android:icon="@drawable/ic_add_black_24dp"/>

    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/login"/>

                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/ic_person_black_24dp"/>
                <item
                    android:id="@+id/nav_all_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_navigate_next_black_24dp"/>

            </group>
        </menu>
    </item>

    <item android:title="@string/categories">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_restaurants"
                    android:title="@string/restaurants"
                    android:icon="@drawable/ic_restaurant_black_24dp"/>

                <item
                    android:id="@+id/nav_bank"
                    android:title="@string/banks"
                    android:icon="@drawable/bank"/>
                <item
                    android:id="@+id/nav_education"
                    android:title="@string/education"
                    android:icon="@drawable/ic_library_books_black_24dp"/>
                <item
                    android:id="@+id/nav_shop"
                    android:title="@string/shop"
                    android:icon="@drawable/ic_shopping_basket_black_24dp"/>

            </group>
        </menu>
    </item>

    <item android:title="share">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/ic_share_black_24dp"/>

                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/ic_add_black_24dp"/>

            </group>
        </menu>
    </item>

</menu>