<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.RetailerStartUpScreen"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/logo_place"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textAllCaps="true"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_extralight"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <Button
                android:id="@+id/login_btn"
                android:onClick="callLoginScreen"
                android:transitionName="transition_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:layout_marginRight="5dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/sign_up_btn"
                android:onClick="callMainSignUpScreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:layout_marginLeft="5dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_we_work"
            android:layout_marginTop="20dp"
            android:background="#00000000"/>
    </LinearLayout>
</ScrollView>