<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.ForgetPasswordSuccessMessage"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="@font/muli_black"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginTop="-50dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_done_all_black_24dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_password_has_been_updated"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"/>
        
        <Button
            android:id="@+id/back_to_login"
            android:onClick="goToLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>