<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.SignUp3rdClass"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/back_signUp_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:transitionName="transition_back_arrow_btn" />

            <TextView
                android:id="@+id/signUp_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:transitionName="transition_title_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.hbb20.CountryCodePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:ccp_areaCodeDetectedCountry="true"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="true"
                android:background="@drawable/black_border"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number"
                app:startIconDrawable="@drawable/ic_phone_black_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:hintTextColor="@color/black"
                app:startIconTint="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/signUp_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:elevation="8dp"
            android:transitionName="transition_signUp_next_btn"/>

        <Button
            android:id="@+id/sign_up_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="#00000000"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="20dp"
            android:transitionName="transition_signUp_login_btn"/>


    </LinearLayout>

</ScrollView>